--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 
 services:
-  flask_app:
+  inventory_flask_app:
     container_name: inventory_flask_app
     image: jingjzheng/inventory_flask_app:1.0.0
     build: .
